<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="none"
        android:id="@+id/grpTerm">
        <item
            android:id="@+id/nav_add_term"
            android:title="@string/add_term" />
        <item
            android:id="@+id/nav_all_term"
            android:title="@string/all_term" />
    </group>
    <group android:checkableBehavior="none"
        android:id="@+id/grpCourse">
        <item
            android:id="@+id/nav_add_course"
            android:title="@string/add_course" />
        <item
            android:id="@+id/nav_all_course"
            android:title="@string/all_course" />
        <item
            android:id="@+id/nav_course_by_term"
            android:title="@string/view_course_by_term" />
    </group>
    <group android:checkableBehavior="none"
        android:id="@+id/grpAssessment">
        <item
            android:id="@+id/nav_add_assessment"
            android:title="@string/add_assessment" />
        <item
            android:id="@+id/nav_all_assessment"
            android:title="@string/all_assessment" />
        <item
            android:id="@+id/nav_assessment_by_course"
            android:title="@string/view_assessment_by_course" />
    </group>
</menu>