<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="top">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollView">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="top">
                        <GridLayout
                            android:id="@+id/gridview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:numColumns="auto_fit"
                            android:verticalSpacing="10dp"
                            android:horizontalSpacing="10dp"
                            android:stretchMode="columnWidth"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/term"/>
                            <Spinner
                                android:id="@+id/cboTerm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:prompt="@string/term"
                                android:layout_column="1"
                                android:layout_row="0" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="1"
                                android:text="@string/title"/>
                            <EditText
                                android:id="@+id/txtTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_row="1"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="2"
                                android:text="@string/start"/>
                            <EditText
                                android:id="@+id/txtStartDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="false"
                                android:layout_column="1"
                                android:layout_row="2"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="3"
                                android:text="@string/end"/>
                            <EditText
                                android:id="@+id/txtEndDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="false"
                                android:layout_column="1"
                                android:layout_row="3"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="4"
                                android:text="@string/status"/>
                            <Spinner
                                android:id="@+id/cboStatus"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:prompt="@string/status"
                                android:entries="@array/status_array"
                                android:layout_column="1"
                                android:layout_row="4" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="5"
                                android:text="@string/mentor_name"/>
                            <EditText
                                android:id="@+id/txtMentorName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_row="5"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="6"
                                android:text="@string/mentor_phone"/>
                            <EditText
                                android:id="@+id/txtMentorPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:inputType="phone"
                                android:layout_column="1"
                                android:layout_row="6"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="8"
                                android:text="@string/mentor_email"/>
                            <EditText
                                android:id="@+id/txtMentorEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:inputType="textEmailAddress"
                                android:layout_column="1"
                                android:layout_row="8"/>

                        </GridLayout>
                        <GridLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="0"
                                android:text="@string/course_start_remind"/>
                            <Switch
                                android:id="@+id/swStart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:layout_column="1"
                                android:layout_row="0"
                                android:layout_gravity="end"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="1"
                                android:text="@string/course_end_remind"/>
                            <Switch
                                android:id="@+id/swEnd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:layout_column="1"
                                android:layout_row="1"
                                android:layout_gravity="end"/>
                        </GridLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="9"
                            android:text="@string/notes"/>
                        <EditText
                            android:id="@+id/txtNotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:lines="5"
                            android:maxLines="5"
                            android:minLines="5"
                            android:overScrollMode="always"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            android:layout_column="1"
                            android:layout_row="9"/>
                    </LinearLayout>
                </ScrollView>
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_base" />
</android.support.v4.widget.DrawerLayout>