<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
                <ImageView
                    android:id="@+id/imgMenu"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_options" />
            </android.support.v7.widget.Toolbar>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    <GridLayout
                        android:id="@+id/gridview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="auto_fit"
                        android:verticalSpacing="10dp"
                        android:horizontalSpacing="10dp"
                        android:stretchMode="columnWidth"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/txtTermTitleLbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"/>
                        <EditText
                            android:id="@+id/txtTermTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:background="@null"
                            android:maxLines="1"
                            android:inputType="text"
                            android:layout_column="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:text="@string/start"/>
                        <EditText
                            android:id="@+id/txtTermStartDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:background="@null"
                            android:layout_column="1"
                            android:layout_row="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="2"
                            android:text="@string/end"/>
                        <EditText
                            android:id="@+id/txtTermEndDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:background="@null"
                            android:layout_column="1"
                            android:layout_row="2"/>
                    </GridLayout>
                    <GridLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="0"
                            android:text="@string/term_start_remind"/>
                        <Switch
                            android:id="@+id/swStart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:layout_column="1"
                            android:layout_row="0"
                            android:layout_gravity="end"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:text="@string/term_end_remind"/>
                        <Switch
                            android:id="@+id/swEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:layout_column="1"
                            android:layout_row="1"
                            android:layout_gravity="end"/>
                    </GridLayout>
                    <TextView
                        android:id="@+id/lblCourses"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/courses"/>
                    <ListView
                        android:id="@+id/lvCourses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_term" />
</android.support.v4.widget.DrawerLayout>