<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="top">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollView">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="top">
                        <GridLayout
                            android:id="@+id/gridview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:numColumns="auto_fit"
                            android:verticalSpacing="10dp"
                            android:horizontalSpacing="10dp"
                            android:stretchMode="columnWidth"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/course"/>
                            <Spinner
                                android:id="@+id/cboCourse"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:prompt="@string/course"
                                android:layout_column="1"
                                android:layout_row="0" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="1"
                                android:text="@string/title"/>
                            <EditText
                                android:id="@+id/txtTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_row="1"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="2"
                                android:text="@string/due_date"/>
                            <EditText
                                android:id="@+id/txtDueDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="false"
                                android:layout_column="1"
                                android:layout_row="2"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="3"
                                android:text="@string/type"/>
                            <Spinner
                                android:id="@+id/cboType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:prompt="@string/type"
                                android:entries="@array/type_array"
                                android:layout_column="1"
                                android:layout_row="3"/>
                        </GridLayout>
                        <GridLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_row="0"
                                android:text="@string/assessment_due_remind"/>
                            <Switch
                                android:id="@+id/swDue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:layout_column="1"
                                android:layout_row="0"
                                android:layout_gravity="end"/>
                        </GridLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_base" />
</android.support.v4.widget.DrawerLayout>